fix: jobField를 enum 타입으로 바꿈으로써 나타나는 컴파일 에러 해결